# parkour-api

./: .git-blame-ignore-revs  .gitignore  API.md  Cargo.toml  flake.nix
admin/: admin.html
scoreboard/: template.html
scoreboard/assets/: main.js  style.css
src/: event.rs  log.rs  main.rs  map.rs  persistence.rs  recordings.rs  route.rs  scoreboard.rs  scores.rs  serde_ext.rs  slug.rs
