[package]
name = "parkour-api"
version = "0.0.5"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
warp = { version = "0.4.2", features = ["server"] }
parking_lot = "0.12.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = { version = "1.0.99" }
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "macros"] }
handlebars = "4.3.7"
rusqlite = { version = "0.39.0", features = ["bundled"] }

[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]
